--- a/package.yaml
+++ b/package.yaml
@@ -34,6 +34,7 @@ dependencies:
 - servant-server
 - warp
 - type-of-html
+- postgresql-simple
 
 library:
   source-dirs: src
@@ -59,3 +60,7 @@ tests:
     - -with-rtsopts=-N
     dependencies:
     - navani
+    - tasty
+    - tasty-discover
+    - tasty-hspec
+    - tasty-hunit
